@@ -1,3 +1,8 @@
+2010-11-10  Nathan Froyd  <froydnj@codesourcery.com>
+
+	PR c++/46065
+	* decl.c (poplevel_named_label_1): Use TREE_CHAIN if necessary.
+
 2010-11-09  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/45894
